@@ -1,4 +1,4 @@
-.TH A5D2_PIO_SET "8" "February 2016" "sama5d2_utils\-0.90" SAMA5D2_UTILS
+.TH A5D2_PIO_SET "8" "July 2018" "sama5d2_utils\-0.90" SAMA5D2_UTILS
 .SH NAME
 a5d2_pio_set \- set Parallel I/O controller line characteristics
 .SH SYNOPSIS
@@ -306,7 +306,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2016 Douglas Gilbert
+Copyright \(co 2016\-2018 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
