@@ -2,5 +2,5 @@ sama5d2-utils (0.90-1) unstable; urgency=low
 
   * start utilities package for Atmel SAM5D2 family
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Wed, 20 Jan 2016 01:00:00 +0100
+ -- Douglas Gilbert <dgilbert@interlog.com>  Mon, 30 Jul 2018 16:00:00 -0400
 
